@@ -1,3 +1,10 @@
+Wed Oct 22 23:34:24 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountsWindow.cpp:
+	* src/QGaimAccountsWindow.h:
+	  - The accounts window's listview resizes a bit nicer on larger
+	    resolutions now.
+
 Wed Oct 22 22:58:01 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
